--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,9 @@ nav{
 /*----------------------------
 my header section style start here
  ---------------------------*/
+ header{
+	background: rgba(255, 144, 14, 0.1);
+}
 .header-sect-txt-mes{
 	width: 580px;
 	height: 225;
@@ -52,5 +55,240 @@ my header section style start here
 .header-sect img{
 	width: 1000px;
 	padding-left: 165px;
+	padding-bottom: 45px;
 }
 /* header section style end here */
+
+/*----------------------->
+main section style start here 
+ <----------------------*/
+ .features{
+	padding-top: 85px;
+	display: flex;
+ }
+ .feature-employee-img{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 24px;
+	padding-left: 80px;
+ }
+ .feature-employee-img img{
+	width: 305px;
+	height: 305px;
+	border-radius: 8px;
+ }
+ .feature-intro-text{
+	padding-top: 210px;
+	padding-left: 70px;
+	width: 470px;
+	height: 300px;
+ }
+ .feature-intro-text h1{
+	width: 450px;
+	color: #727272;
+	font-size: 45px;
+	font-weight: 700;
+	padding-bottom: 10px;
+ }
+ .of-our-text{
+	color: #131313;
+ }
+ .features-text{
+	color: #FF900E;
+ }
+ .btn-feature{
+	padding-top: 22px;
+ }
+ .feature-intro-btn{
+	width: 180px;
+	height: 64px;
+	color: white;
+	background-color: #FF900E;
+	border: 0px;
+	border-radius: 8px;
+	font-size: 20px;
+	font-weight: 600;
+ }
+ /* main section style end here */
+
+ /*-------------------->
+ detail feature style start here 
+  <---------------------*/
+	.all-feature{
+		margin-top: 100px;
+		display: flex;
+	}
+	.feature-introduce{
+		width: 586px;
+		padding-right: 54px;
+		padding-left: 90px;
+	}
+	.feature-introduce h1{
+		font-size: 45px;
+		font-weight: 700;
+	}
+	.feature-item{
+		background-color: white;
+		margin-top: 7px;
+	}
+	.feature-item h2{
+		font-size: 20px;
+		font-weight: 600;
+	}
+	.feature-list{
+		background-color: rgba(222, 222, 222, 0.848);
+		margin-top: 20px;
+	}
+	.feature-exp-btn{
+		/* border: 2px solid gold; */
+		background: url(../images/architect.png);
+		width: 700px;
+		object-fit: fill;
+		object-position: center;
+		padding-top: 333px;
+		background-repeat: no-repeat;
+		background-size: 400px, 400px;
+		background-position-x: 100px;
+	}
+	.feature-exp-btn button{
+		background-color: #FF900E;
+		color: white;
+		border: 0;
+		border-radius: 7px;
+		width: 200px;
+		height: 100px;
+		margin-left: 202px;
+		margin-top: 170px;
+	}
+	/* detail feature style end here */
+
+	/*----------------->
+	fact style star here
+	<------------------*/
+	.facts{
+		padding-top: 100px;
+		padding-left: 100px;
+	}
+	.fact-intro{
+		padding-bottom: 70px;
+	}
+	.fact-intro h1{
+		font-size: 45px;
+		font-weight: 700;
+	}
+	.fact-intro p{
+		width: 540px;
+	}
+	.fact-item1{
+		width: 170px;
+		height: 136px;
+		text-align: center;
+		border: 1px solid #FF900E;
+		padding: 30px 21px 38px 21px;
+	}
+	.fact-item1 img{
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.fact-item1 p{
+		padding-top: 6px;
+	}
+	.facts-items{
+		padding-left: 70px;
+		gap: 50px;
+		display: flex;
+	}
+	/* fact style end here */
+
+	/*--------------------->
+	our sponsor style start here 
+	----------------------<*/
+	
+	.sponsor-detail{
+		width: 540px;
+		height: 128px;
+		text-align: center;
+		padding-left: 450px;
+		padding-top: 100px;
+	}
+	.sponsor-detail h1{
+		font-size: 45px;
+		font-weight: 700;
+		padding-bottom: 20px;
+	}
+	.sponsor-img img{
+		mix-blend-mode: luminosity;
+		padding-left: 55px;
+	}
+	.sponsor-img-1{
+		mix-blend-mode: luminosity;
+	}
+	.sponsor-img{
+		padding-top: 60px;
+		padding-left: 120px;
+	}
+	/* our sponsor end here */
+
+	footer{
+		margin-top: 40px;
+		text-align: center;
+		background-color: #e1d1bd;
+		height: 350px;
+		font-size: 30px;
+		font-weight: 550;
+
+	}
+	footer p{
+		padding-top: 60px;
+		padding-bottom: 10px;
+	}
+	.footer-form{
+		height: 180px;
+	}
+	.sub-btn{
+		background-color: #FF900E;
+		color: white;
+		font-size: 20px;
+		font-weight: 600px;
+		width: 170px;
+		height: 54px;
+		border: 0;
+		border-radius: 5px;
+	}
+	.form{
+		width: 225px;
+		height: 54px;
+		font-size: 19px;
+		border: 0;
+		border-radius: 5px;
+	}
+	/* footer section end */
+
+
+/*--------------------
+This area is for bonus number
+-------------------- */
+	/* Hover effect  */
+.fact-item1:hover{
+	border: 1px solid red;
+	transform: skew(6deg, 4deg);
+	font-weight: 800;
+	color: orangered;
+}
+.logo{
+	font-size: 45px;
+	font-weight: 700;
+}
+.logo span{
+	color: orangered;
+}
+.nav-section ul li a{
+	font-size: 18px;
+	font-weight: 500;
+}
+.love{
+	color: rgba(255, 68, 0, 0.718);
+}
+.enjoy{
+	color: lightcoral;
+}
